--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,9 @@ on:
       - 'v*.*.*'  # 当推送版本标签时触发，如 v1.0.0
   workflow_dispatch:  # 允许手动触发
 
+permissions:
+  contents: write  # 允许创建 Release 和上传文件
+
 jobs:
   build-windows:
     runs-on: windows-latest
@@ -89,64 +92,26 @@ jobs:
         run: echo "tag=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
 
       - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ steps.tag.outputs.tag }}
-          release_name: Solar System Simulation ${{ steps.tag.outputs.tag }}
+          name: Solar System Simulation ${{ steps.tag.outputs.tag }}
           body: |
             ## 太阳系模拟器 ${{ steps.tag.outputs.tag }}
             
             ### 下载说明
             - **Windows**: 下载 `solar_system_simulation-windows.zip`，解压后运行 `solar_system_simulation.exe`
             - **Android**: 
-              - `app-arm64-v8a-release.apk` - 适用于 64位 ARM 设备（推荐）
-              - `app-armeabi-v7a-release.apk` - 适用于 32位 ARM 设备
-              - `app-x86_64-release.apk` - 适用于 x86_64 设备
+              - `solar_system_simulation-arm64-v8a.apk` - 适用于 64位 ARM 设备（推荐）
+              - `solar_system_simulation-armeabi-v7a.apk` - 适用于 32位 ARM 设备
+              - `solar_system_simulation-x86_64.apk` - 适用于 x86_64 设备
             
             ### 更新内容
             - 请查看提交历史获取详细更新内容
           draft: false
           prerelease: false
-
-      - name: Upload Windows Release Asset
-        uses: actions/upload-release-asset@v1
+          files: |
+            solar_system_simulation-windows.zip
+            *.apk
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./solar_system_simulation-windows.zip
-          asset_name: solar_system_simulation-windows.zip
-          asset_content_type: application/zip
-
-      - name: Upload Android ARM64 Release Asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./app-arm64-v8a-release.apk
-          asset_name: solar_system_simulation-arm64-v8a.apk
-          asset_content_type: application/vnd.android.package-archive
-
-      - name: Upload Android ARMv7 Release Asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./app-armeabi-v7a-release.apk
-          asset_name: solar_system_simulation-armeabi-v7a.apk
-          asset_content_type: application/vnd.android.package-archive
-
-      - name: Upload Android x86_64 Release Asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./app-x86_64-release.apk
-          asset_name: solar_system_simulation-x86_64.apk
-          asset_content_type: application/vnd.android.package-archive
